add Spring Data JPA and REST controllers